# tesseract-web

./: Dockerfile  README.md  gunicorn.conf.py  ocr.py  pyproject.toml  requirements.in  requirements.txt  wsgi.py
.github/workflows/: docker-image.yml  publish.yaml
static/: main.css  main.js
static/uploads/: .keep
templates/: index.html
